Adiconado checkpoint do jupyter para o trabalho da aula no gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .~lock.hour.csv#
 .ipynb_checkpoints/PSO_Rastrigin-checkpoint.ipynb
 regressao/.ipynb_checkpoints
+trabalho_aula5/.ipynb_checkpoints/
