ignorando o diretório de datasets para o git não ficar tentando subir arquivos grandes e causando erros nos commits

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .ipynb_checkpoints/PSO_Rastrigin-checkpoint.ipynb
 regressao/.ipynb_checkpoints
 trabalho_aula5/.ipynb_checkpoints/
+trabalho_aula5/datasets
