remocao de notnull e conversao para toNumeric nao concluida

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 regressao/.ipynb_checkpoints
 trabalho_aula5/.ipynb_checkpoints/
 trabalho_aula5/datasets
+Trabalho/dados.csv
+Trabalho/dados.csv
+Trabalho/datasets/
